2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Gave field_value classes copy-on-write semantics.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile:  Ignore X3DVrmlParser source files.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Clean up of clean up.

	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp:  Doc-comment fixes.

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Code clean up; fixed some variable names.

	* src/libopenvrml/openvrml/X3DVrmlParser.cpp
	* src/libopenvrml/openvrml/X3DVrmlParser.g

2005-10-23 Braden McDaniel  <braden@endoframe.com>

	Concrete exposedfields need to implement
	openvrml::field_value::do_clone.

	* src/libopenvrml/openvrml/exposedfield.cpp
	* src/libopenvrml/openvrml/exposedfield.h
	* src/libopenvrml/openvrml/vrml97node.cpp

2005-10-07 Braden McDaniel  <braden@endoframe.com>

	Applied (modified) patch from <sgrieve@users.sourceforge.net> to
	add double-precision field types and initial support for parsing
	VRML-encoded X3D.  In its current form, the X3D parser will
	always fail; correcting this depends on adding support for,
	at least, the nodes in X3D's Core profile.

	* java/Makefile.am
	* java/vrml/field/ConstMFDouble.java:  Added file.
	* java/vrml/field/ConstMFVec2d.java:  Added file.
	* java/vrml/field/ConstMFVec3d.java:  Added file.
	* java/vrml/field/ConstSFDouble.java:  Added file.